--- a/src/pages/Post/style.module.scss
+++ b/src/pages/Post/style.module.scss
@@ -5,7 +5,14 @@
     min-height: calc(100vh - 60px);
     
     &_container {
+        display: grid;
+        gap: 40px;
         max-width: 940px;
         margin: 0 auto;
+
+        @media screen and (min-width: 1170px) {
+            grid-template-columns: 460px minmax(0, calc(100% - 460px));
+            align-items: flex-start;
+        }
     }
 } 
